# art_diplom

./: .gitignore  pyproject.toml
certificate/: settings.py  urls.py
man/: urls.py  views.py
pictures/: admin.py  choices.py  models.py  views.py
pictures/migrations/: 0001_initial.py  0002_auto_20200612_0553.py  0003_auto_20200612_0554.py  0004_auto_20200612_0651.py  0005_auto_20200612_0725.py  0006_auto_20200612_0727.py
templates/: base.html
