[tool.poetry]
name = "final_work"
version = "0.1.0"
description = ""
authors = ["gleb <glebok1235@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^7.1.2"
Jinja2 = "^2.11.2"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
Django = "^3.0.6"
pylint = "^2.5.2"
psycopg2 = "^2.8.5"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
